Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Remove support for Python 2.7

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Add warning about different product between invoice line and stock move

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Use stock_moves from account_invoice_stock

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Add Python3 support

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)

Version 3.6.0 - 2015-04-20
* Bug fixes (see mercurial logs for details)
* Add support for PyPy
* Allow to override the stock moves used to compute the account move

Version 3.4.0 - 2014-10-20
* Bug fixes (see mercurial logs for details)
* Add account stock method on fiscal year

Version 3.2.0 - 2014-04-21
* Bug fixes (see mercurial logs for details)

Version 3.0.0 - 2013-10-21
* Bug fixes (see mercurial logs for details)

Version 2.8.0 - 2013-04-22
* Bug fixes (see mercurial logs for details)

Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)

Version 2.4.0 - 2012-04-23
* Bug fixes (see mercurial logs for details)
* Use cost price instead of unit price when cost method is "fixed"

Version 2.2.0 - 2011-10-24
* Bug fixes (see mercurial logs for details)

Version 2.0.0 - 2011-04-27
* Initial release