@@ -17,9 +17,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name" lang="sl">COGS</field>
             <field name="type" ref="account.account_type_template_expense"/>
             <field name="reconcile" eval="True"/>
-            <field name="deferral" eval="True"/>
             <field name="parent" ref="account.account_template_root"/>
-            <field name="kind">other</field>
         </record>
 
     </data>
