@@ -14,11 +14,10 @@ this repository contains the full copyright notices and license terms. -->
             
             
             
+            
             <field name="type" ref="account.account_type_template_expense_en"/>
             <field name="reconcile" eval="True"/>
-            <field name="deferral" eval="True"/>
             <field name="parent" ref="account.account_template_root_en"/>
-            <field name="kind">other</field>
         </record>
 
     </data>
