@@ -17,9 +17,7 @@ this repository contains the full copyright notices and license terms. -->
             
             <field name="type" ref="account.account_type_template_expense_pt"/>
             <field name="reconcile" eval="True"/>
-            <field name="deferral" eval="True"/>
             <field name="parent" ref="account.account_template_root_pt"/>
-            <field name="kind">other</field>
         </record>
 
     </data>
