@@ -12,13 +12,12 @@ this repository contains the full copyright notices and license terms. -->
             
             
             
+            
             <field name="name">COGS</field>
             
             <field name="type" ref="account.account_type_template_expense_ru"/>
             <field name="reconcile" eval="True"/>
-            <field name="deferral" eval="True"/>
             <field name="parent" ref="account.account_template_root_ru"/>
-            <field name="kind">other</field>
         </record>
 
     </data>
